Added temp block for Region Naming.

--- a/resources/assets/witherwar/lang/en_us.lang
+++ b/resources/assets/witherwar/lang/en_us.lang
@@ -1,4 +1,5 @@
 tile.dead_ash.name=Dead Ash
+tile.guidestone.name=Provincial Guidestone
 tile.flesh.name=Flesh
 tile.terra_catar_maw.name=Maw
 tile.terra_catar.name=Cataromotus Anocortex
