With Jabelar's help, I now have a custom WorldType with associated WorldProvider and ChunkGenerator. Next will be tuning this for the Pillar.

--- a/resources/assets/witherwar/lang/en_us.lang
+++ b/resources/assets/witherwar/lang/en_us.lang
@@ -6,3 +6,5 @@ tile.terra_catar.name=Cataromotus Anocortex
 tile.terra_kali.name=Kalimmacinus Anocortex
 entity.serpent_wither_skeleton.name=SerpentWither
 itemGroup.witherwar_tab=The End Is Not the End
+generator.pillar=Pillar
+generator.pillar.info=A transient world of Ocean.
