--- a/resources/assets/witherwar/lang/en_us.lang
+++ b/resources/assets/witherwar/lang/en_us.lang
@@ -4,6 +4,7 @@ tile.flesh.name=Flesh
 tile.terra_catar_maw.name=Maw
 tile.terra_catar.name=Cataromotus Anocortex
 tile.terra_kali.name=Kalimmacinus Anocortex
+tile.conduit.name=Conduit
 entity.serpent_wither_skeleton.name=SerpentWither
 itemGroup.witherwar_tab=The End Is Not the End
 generator.pillar=Pillar
