Nightly commit. Minimal basic alchemy system working (Geyser->Conduit->RitualBlock).

--- a/resources/assets/witherwar/lang/en_us.lang
+++ b/resources/assets/witherwar/lang/en_us.lang
@@ -5,6 +5,8 @@ tile.terra_catar_maw.name=Maw
 tile.terra_catar.name=Cataromotus Anocortex
 tile.terra_kali.name=Kalimmacinus Anocortex
 tile.conduit.name=Conduit
+tile.geyser.name=Geyser
+tile.ritualblock.name=Ritual Block
 entity.serpent_wither_skeleton.name=SerpentWither
 itemGroup.witherwar_tab=The End Is Not the End
 generator.pillar=Pillar
