Added player dash feature. Defaults to P, rebind as needed. No cooldown right now, functions SP or MP, takes food away, may change.

--- a/resources/assets/witherwar/lang/en_us.lang
+++ b/resources/assets/witherwar/lang/en_us.lang
@@ -11,3 +11,5 @@ entity.serpent_wither_skeleton.name=SerpentWither
 itemGroup.witherwar_tab=The End Is Not the End
 generator.pillar=Pillar
 generator.pillar.info=A transient world of Ocean.
+key.dash.desc=Dash
+key.magicbeans.teinte=The End
