Messed around with pattern/shape generation. Still not sure best approach.

--- a/resources/assets/witherwar/lang/en_us.lang
+++ b/resources/assets/witherwar/lang/en_us.lang
@@ -7,6 +7,7 @@ tile.terra_kali.name=Kalimmacinus Anocortex
 tile.conduit.name=Conduit
 tile.geyser.name=Geyser
 tile.ritualblock.name=Ritual Block
+tile.debug_bl.name=Debug Block
 entity.serpent_wither_skeleton.name=SerpentWither
 itemGroup.witherwar_tab=The End Is Not the End
 generator.pillar=Pillar
